# smartphone

./: README.md  pyproject.toml  report.md  smartphone-comparison.py  smartphone_comparison.md
src/smartphone_comparison/: crew.py  main.py
src/smartphone_comparison/config/: agents.yaml  tasks.yaml
